More work on the American Union State

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -134,7 +134,7 @@ TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 ""
 TEX_american_legion:0 "Apartheid America"
 TEX_american_legion_desc:0 ""
-TEX_old_southern_money:0 "Old Southern Money"
+TEX_old_southern_money:0 "Coporate Ties	"
 TEX_old_southern_money_desc:0 ""
 TEX_protecting_our_race:0 "Protecting our Race"
 TEX_protecting_our_race_desc:0 ""
@@ -165,8 +165,8 @@ TEX_industrial_security_act:0 "The Industrial Security Act"
 TEX_industrial_security_act_desc:0 ""
 TEX_infastructure_renewel:0 "Infrastructure Renewal act"
 TEX_infastructure_renewel_desc:0 ""
-TEX_move_industry_westwards:0 "Move Industry Westwards"
-TEX_move_industry_westwards_desc:0 ""
+TEX_soldier_bill:0 "Pass the G.I Bill"
+TEX_soldier_bill_desc:0 ""
 TEX_found_abc:0 "Found ABC"
 TEX_found_abc_desc:0 ""
 TEX_economic_rebirth:0 "Economic Rebirth"
@@ -288,7 +288,10 @@ TEX_american_apartheid_desc:0 "While Jim Crow laws segregating America were prin
 TEX_whites_welfare:0 "Welfare For Whites"
 TEX_entente_american_trade:0 "Canadian-American Trade"
 TEX_german_american_trade:0 "German-American Trade"
-
+TEX_reconstruction_policy:0 "Reconstructing America"
+TEX_abc_founded:0 "American Broadcasting Corporation"
+TEX_populist_education:0 "Populist Education"
+TEX_solider_bill:0 "G.I Bill"
 ### Parties ###
 TEX_totalist_party:0 "ACP"
 TEX_totalist_party_long:0 "American Communist Party"
