More work on the USA - merged the two military juntas

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -81,10 +81,8 @@ USA_loyalty_to_mac_arthur:0 "Loyalty to MacArthur"
 USA_loyalty_to_mac_arthur_desc:0 ""
 USA_american_cincinnatus:0 "the American Cincinnatus"
 USA_american_cincinnatus_desc:0 ""
-USA_military_junta_min:0 "Military Junta"
-USA_military_junta_min_desc:0 ""
-USA_military_junta_major:0 "Extended Military Junta"
-USA_military_junta_major_desc:0 ""
+USA_military_junta:0 "Military Junta"
+USA_military_junta_desc:0 ""
 USA_american_ceaser:0 "The American Caesar"
 USA_american_ceaser_desc:0 ""
 
@@ -1222,7 +1220,6 @@ ustates.176.d:0 "President MacArthur who is even not President de iure has to ma
 ustates.176.a:0 "MacArthur doesn't need to be President to exercise power!"
 ustates.176.b:0 "MacArthur will be President but he will leave day-to-day ruling to Senate and House"
 ustates.176.c:0 "One nation, one country, one ruler"
-
 ustates.177.t:0 "1940 presidential elections"
 ustates.177.d:0 "The Patriotic Party connected with Mac Arthur and his cabinet has a great chance of winning the Presidential elections. The voters are stunned with pro-government propaganda and police actions against the opposition are working. It seems that the government will win and MacArthur's puppet will be the new President."
 ustates.177.a:0 "Democrat"
