--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -476,20 +476,47 @@ fengtian.new.8.d:0 "For better or worse, land reform is now underway at both the
 fengtian.new.8.a:0 "This is the price of progress"
 ##The Fate of Mantetsu Schooling##
 fengtian.new.9.t:0 "The Fate of Mantetu Schooling"
-fengtian.new.9.d:0 "INSERT"
+fengtian.new.9.d:0 "Mantetsu has long maintained a series of privately run schools originally intended for the sons and daughters of employees, as well as Japanese immigrants, which pride themselves on providing an education comparable or even exceeding those available in the Home Islands. At the Japanese government's behest, these schools were more recently opened to the paying public, clearly as part of an attempt to spread Japanese culture and norms. However, the schools are crucial to education, not only because many children of Fengtian's wealthy are enrolled, but also because they provide their services at no government cost. \n\n Any attempt to close the Mantetsu schools to the public will be met not only with Japanese outrage, but a state of educational chaos as we try to pick up the slack. While the civil service has undergone reforms, it remains questionable as to whether our economy and domestic educational staff will be up to the challenge."
 fengtian.new.9.a:0 "Close the schools"
 fengtian.new.9.b:0 "There is no choice"
 fengtian.new.10.t:0 "The Kimono Scandal"
-fengtian.new.10.d:0 "INSERT"
+fengtian.new.10.d:0 "Scandal! In a most unfortunate turn of events, the Grand Marshal's youngest daughter has been photographed wearing a Japanese Kimono during a photo-session at the Mantetsu-run 'Hokutou Kunitachidaigaku' or 'Northeast National Academy'. Despite risk of arrest, word of the photo has already spread widely, along with a few copies of the image itself, though local and national news agencies know better than to print this defamation. Some agents in the military's intelligence branch speculate that the image was intentionally taken and spread by the Japanese as a means of punishing the government for recent actions, but no supporting evidence has emerged. \n\n There is little question, however, that the Qing will use this opportunity to spread their nefarious propaganda."
 fengtian.new.10.a:0 "What an embarassment!"
-fengtian.new.10.b:0 "Close the schools!"
+fengtian.new.10.b:0 "Close the Mantetsu schools!"
 fengtian.new.11.t:0 "Students Join the Youth League"
-fengtian.new.11.d:0 "INSERT"
+fengtian.new.11.d:0 "In an embarassing and deeply damaging incident, a band of Chinese school children from Changchun recently announced their intention to join the Fengtian Youth League, which actively promotes Japanese interests in our country. Obviously their young minds are easily impressionable, but their parade through the streets of their home city, waving Japanese flags, has disgusted many, and invited outright enimity toward themselves and the government. Parents weep, asking how their children could become so warped, and demand an alternative to these dangerous Japanese-run schools."
 fengtian.new.11.a:0 "This is an outrage!"
 fengtian.new.11.b:0 "Close the schools!"
 fengtian.new.12.t:0 "Chinese Uniforms for Chinese Students"
-fengtian.new.12.d:0 "INSERT"
-fengtian.new.12.a:0 "A point of pride!" 
+fengtian.new.12.d:0 "After some time and effort, as well as considerable expense, several new Chinese-run schools have pooled their resources to produce a new standard uniform for our students. While this may seem like a small change, the uniforms are a symbol of Chinese independence, as well as a disciplined and modern society. Surely a bright new future awaits!"
+fengtian.new.12.a:0 "A point of pride!"
+fengtian.new.13.t:0 "Building the Jilin-Hailong Line"
+fengtian.new.13.d:0 "INSERT"
+fengtian.new.13.a:0 "Choose a Chinese Company"
+fengtian.new.13.b:0 "Choose Mantetsu"
+fengtian.new.14.t:0 "The Jilin-Hailong Line is Complete"
+fengtian.new.14.d:0 "INSERT"
+fengtian.new.14.a:0 "Great news!"
+fengtian.new.15.t:0 "Building the Changchun-Dailai Line"
+fengtian.new.15.d:0 "INSERT"
+fengtian.new.15.a:0 "Choose a Chinese Company"
+fengtian.new.15.b:0 "Choose Mantetsu"
+fengtian.new.16.t:0 "The Changchun-Dailai Line is Complete"
+fengtian.new.16.d:0 "INSERT"
+fengtian.new.16.a:0 "Excellent!"
+fengtian.new.17.t:0 "Building the Taonan-Suolun Line"
+fengtian.new.17.d:0 "INSERT"
+fengtian.new.17.a:0 "Choose a Chinese Company"
+fengtian.new.17.b:0 "Choose Mantetsu"
+fengtian.new.18.t:0 "Railway Construction Workers Strike!"
+fengtian.new.18.d:0 "INSERT"
+fengtian.new.18.a:0 "Unfortunate"
+fengtian.new.19.t:0 "Delays Plague Railway Construction"
+fengtian.new.19.d:0 "INSERT"
+fengtian.new.19.a:0 "Frustrating"
+fengtian.new.20.t:0 "Delays Plague Mantetsu Railway Construction"
+fengtian.new.20.d:0 "INSERT"
+fengtian.new.20.a:0 "Frustrating"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
