Some more work on the PSA

--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -9,20 +9,24 @@ CAL_restore_the_union:0 "Restore the Union"
 CAL_restore_the_union_desc:0 "Against all odds, we have managed to defeat the radicals in the east. We have brought order to where there was once chaos, bloodshed and anarchy. Now we have a chance to restore the United States back to power and bring the prosperity of the Pacific to the Atlantic."
 CAL_new_california_republic:0 "New Californian Republic"
 CAL_new_california_republic_desc:0 "The east is lost! consumed by the radicals be they the American First or the Syndicalists and then there is MacArthur own ego. To persevere the ideals of America we should set up a new republic in the east where the ideals that made America great can remain."
-CAL_military_takes_over:0 "Military takes over"
-CAL_military_takes_over_desc:0 "This is extraordinary times and in order to protect the people of the west coast from the chaos in the east. The Military will protect us from the chaos and keep our prosperity!"
-CAL_military_reorganization:0 "Military Reorganisation"
-CAL_military_reorganization_desc:0 "In order to better preserve democracy and the prosperity of the west, the military is undergoing reorganisation to do just that. This will prepare our brave men for the duties of defending the Pacific from Radicals."
-CAL_strategic_service:0 "Strategic Service Office”
-CAL_strategic_service_desc:0 "In order to protect the West Coast from threats both internal and external, the military has decided to form the Office of Strategic Service. The office of Strategic Service will handle the intelligence duties of the state. The radicals and tyrants back east shall be rooted out before they ever get a hold in California."
-CAL_patriotic_duty:0 "Patriotic duty"
-CAL_patriotic_duty_desc:0 "It is a duty for every Californian to serve the Pacific States. This will teach our people moral and discipline to the people and help keep the Pacific States safe from harm."
-CAL_enginering_corps:0 "Engineering Corps"
-CAL_enginering_corps_desc:0 "The Engineering Corps of the military has proposed that they help take on the activity of building the country. The military organisation can help speed up the construction throughout the country if they are giving a hand in this regard."
-CAL_purge_radicals:0 "Purge Radicals"
-CAL_purge_radicals_desc:0 "To protect the West Coast, we need to purge the radicals from both the right and the left. We do not need the Syndicalists or the American First here in the west coast disrupting our prosperity.."
-CAL_peoples_stewards:0 "Stewards of Democracy"
-CAL_peoples_stewards_desc:0 "The military are the stewards of Democracy in the West. While the east may have fallen to chaos, we have protected it. Though freedoms may have been lessened, democracy remains under the military’s carefully guided hand of course."
+CAL_san_fransico_convention:0 "The San Fransico Convention"
+CAL_san_fransico_convention_desc:0 ""
+CAL_pacifican_identity:0 "Pacifican Identity"
+CAL_pacifican_identity_desc:0 ""
+CAL_building_up_california:0 "Californian Investments"
+CAL_building_up_california_desc:0 ""
+CAL_oregon_investment:0 "Oregonian Investments"
+CAL_oregon_investment_desc:0 ""
+CAL_washington_investment:0 "Washington Investments"
+CAL_washington_investment_desc:0 ""
+CAL_new_nationalism:0 "New Nationalism"
+CAL_new_nationalism_desc:0 ""
+CAL_post_war_psa:0 "Post War PSA"
+CAL_post_war_psa_desc:0 ""
+CAL_gi_bill:0 "The Gi Bill"
+CAL_gi_bill_desc:0 ""
+CAL_fate_of_the_unions:0 "Fate of the Unions" 
+CAL_fate_of_the_unions_desc:0 ""
 CAL_beacon_of_democracy:0 "Beacon of Democracy"
 CAL_beacon_of_democracy_desc:0 "With Syndicalists in the Midwest and American First members in the South and everything in between in the rest of the country, the east is losing the democracy of America. We on the Pacific coast remain the last beacon of democracy. We shall remain a bright light in a dark time. "
 CAL_encourge_free_thought:0 "Keep the Constitution"
@@ -187,7 +191,9 @@ CAL_japanese_research_cooperation:0 "Join Rikagaku Kenkyusho"
 CAL_japanese_research_cooperation_desc:0 ""
 CAL_american_autonomy:0 "American Autonomy"
 CAL_american_autonomy_desc:0 ""
-
+CAL_school_of_ameirca:0 "School of America"
+CAL_school_of_ameirca_desc:0 ""
+CAL_american_business:0 "American Business Ties"
 ### Ideas ###
 california_rearmament:0 "California War Industries"
 hawaii_revolts:0 "The Hawaii Revolts"
@@ -217,7 +223,7 @@ CAL_nbc_radio:0 "National Broadcasting Company"
 CAL_jappanese_businesses:0 "Japanese-Pacific Business ties"
 CAL_aog_offices:0 "German – Pacific business ties"
 CAL_general_strike_malus:0 "West Coast General Strike"
-
+CAL_soldiers_bill:0 "G.I Bill"
 ### Parties ###
 CAL_totalist_party:0 "PCP"
 CAL_totalist_party_long:0 "Pacific Communist Party"
@@ -506,3 +512,35 @@ pacificstates.55.a:0 "How humiliating !"
 pacificstates.56.t:0 "PSA refused to sign peace treaty!"
 pacificstates.56.d:0 "The Pacific States refused our generous peace offer and renewed military actions..."
 pacificstates.56.a:0 "They will pay for this..."
+pacificstates.100.t:0 "Fate of the Unions"
+pacificstates.100.d:0 "Now that the civil war has come to an end, many are wondering what we should do about the unions allied with the CSA. Some wish those unions banned arguing that they will try to cause chaos in the Pacific States and do more harm then good. While other arguing the opposite saying that they do more good then harm and banning them will radicalize them further."
+pacificstates.100.a:0 "Unions contribute to prosparity"
+pacificstates.100.b:0 "Unions are not needed for prosparity"
+pacificstates.101.t:0 "The Underground Railroad?"
+pacificstates.101.d:0 "The CSA have emerged victorious in the civil war. As they begin to implement their radical agenda that will destroy the lives of Americans throughout the rest of America a number of political leaders have come together to discuss the idea of an Underground Railroad that would help bring in refugees away from syndicalism. This will cost time and money but will eventually be worth it they say."
+pacificstates.101.a:0 "Establish the Railroad!"
+pacificstates.101.b:0 "It is not Worth our Time"
+pacificstates.102.t:0 "The Underground Railroad?"
+pacificstates.102.d:0 "The American Union State has emerged victorious in the civil war. As they begin to implement their radical agenda that will destroy the lives of Americans throughout the rest of America a number of political leaders have come together to discuss the idea of an Underground Railroad that would help bring in refugees from the AUS. This will cost time and money but will eventually be worth it they say."
+pacificstates.102.a:0 "Establish the Railroad!"
+pacificstates.102.b:0 "It is not worth our time"
+pacificstates.103.t:0 "The Underground Railroad?"
+pacificstates.103.d:0 "MacArthur has emerged victorious in the civil war and just as we predicted he has moved to trample the rights of Americans throughout the country. It was good that we left before his tyranny could come to our shores. However now political leaders are wondering about setting up an underground railroad to bring others out of tyranny. "
+pacificstates.103.a:0 "Establish the Railroad!"
+pacificstates.103.b:0 "It is not worth our time"
+pacificstates.104.t:0 "Treaty of Friendship?"
+pacificstates.104.d:0 "The United States has managed to win the civil war without succumbing to tyranny. Democracy now prevails in the east. Many political leaders are suggesting we send an offer of friendship to try and improve relations with the USA. "
+pacificstates.104.a:0 "Send the offer"
+pacificstates.105.t:0 "Refugees from the CSA"
+pacificstates.105.d:0 "Refugees have recently arrived from the CSA. They have crossed over the Rockies to try and establish a new life in the Pacific States. Many of them are business friendly men and women who are aghast at the radical transformation going on in the rest of the country."
+pacificstates.105.a:0 "Welcome Friends"
+pacificstates.106.t:0 "Refugees from the AUS"
+pacificstates.106.d:0 "Refugees have recently arrived from the AUS. They have crossed over the Rockies to try and establish a new life in the Pacific States. Many of them are those who wish to escape the racial injustice that is being left unchecked and a surprising number of progressives who wish to escape the AUS. "
+pacificstates.106.a:0 "Welcome Friends"
+pacificstates.107.t:0 "Refugees from MacArthur's Tyranny"
+pacificstates.107.d:0 "Refugees have recently arrived from the USA. They have crossed over the Rockies to try and establish a new life in the Pacific States. All in an attempt to flee from the tyranny that is MacArthur's regime in America. "
+pacificstates.107.a:0 "Welcome Friends"
+pacificstates.108.t:0 "Treaty with the PSA?"
+pacificstates.108.d:0 "The PSA have sent us a treaty to establish better relations between us and them. This has caused a split within the government. Some say we should sign the treaty to improve relations as it could lead to reunification sooner. On the other hand just as many say that signing the treaty will prevent that since we are acknowledging them as a separate state. "
+pacificstates.108.a:0 "Sign the Treaty"
+pacificstates.108.b:0 "Don't Sign the Treaty"
