Localisation for commented out new foci. Hopefully this doen't cause a bug - please undo it if it does :)

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -116,6 +116,12 @@ ETH_PanAfrica:0 "The Pan-Afrikan Movement"
 ETH_PanAfrica_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is the PanAfrican movement - and regardless of if we commit to it or not, we should follow some of its teachings."
 ETH_MPB:0 "Closer Bonds with Major Nations"
 ETH_MPB_desc:0 "We must not make our choice rashly. Rather, we must consider a wide range of ways to cement our strength. One of these ways is forging closer ties with the major powers, European or otherwise - and regardless of if we commit to it or not, we should follow some of its teachings."
+ETH_Blindness_Horn:0 "A Blindness over the Horn"
+ETH_Blindness_Horn_desc:0 "Germany has turned to look at its economy, MittleAfrika at its natives and Egypt at the Ottomans. It looks like the time has come for the conflict between the Dervish State and us to boil back up once again."
+ETH_Germany_Not_Watching:0 "Unlocks the Reforms and our own Outwards Ambitions."
+ETH_Integrate_Dervish:0 "Integrate the ex-Dervish State"
+ETH_Integrate_Dervish_desc:0 "There is still uncertainty about the fate of Somaliland. However, we must properly integrate it into our nation and reap the benefits."
+ETH_Derv_Int:0 "Strife within the ex-Dervish State in Somaliland will cease and it will be fully integrated"
 
 ### Events ###
 ethiopia.1.t:0 "Ethiopia, an Empire at the Crossroads"
