--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -240,10 +240,10 @@ UKR_Coll_Prog:0 "Collectivisation"
 UKR_Coll_Prog_desc:0 "After the latest agricultural crisis among the 'Kulaks', we got many new poor peasants all over Ukraine. Khrushchev supposes that they can work at the collective farms and produce the goods for the country, which will provide them with the farming tools and pay them salary."
 UKR_Fate_Monarchy:0 "The Fate of the Monarchy"
 UKR_Fate_Monarchy_desc:0 "King Vasily I gave Nikita Khrushchev extensive powers in a bid to control the revolutionary forces sweeping the country. Now that Khrushchev's initial program has been implemented, many interest groups within Ukraine are asking for Royal Power to intervene to create a more sustainable order."
-UKR_Syn_Rev:0 "Syndicalist Revolution!"
-UKR_Syn_Rev_desc:0 "Nikita Khrushchev and the Popular Front proclaimed the Republic of Ukraine. The King and his supporters have to leave the country!"
-UKR_Remove_Khrushchev:0 "Remove Khrushchev"
-UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late."
+UKR_Syn_Rev:0 "Red Hetman"
+UKR_Syn_Rev_desc:0 "As the great Hetman Bogdan Khmelnitsky, who once liberated people on the both riversides of the Dnieper from the Polish yoke, Nikita Khrushchev and the Popular Front threw out the King and all these landowners, who controled Ukraine more than 20 years. Finally the people of Ukraine are ready to build new society, proud and free!"
+UKR_Remove_Khrushchev:0 "Red Resistance"
+UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late. But the peasants and workers haven't forgotten their leader, who had promised a great future for Ukraine. The attacks on the police by the syndicalist rebels happen almost every week. We must do something to prevent a great crisis!"
 
 UKR_Broad_Coalition:0 "Coalition is formed"
 UKR_Broad_Coalition_desc:0 "Realising the syndicalist threat, Hetman Skorapadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
