Finished adapting all the unused city pics of the base mod, added lyon and london too

--- a/localisation/terrain_l_english.yml
+++ b/localisation/terrain_l_english.yml
@@ -182,6 +182,15 @@
  newyork:0 "Urban"
  newyork_desc:0 ""
  
+ pyongyang:0 "Urban"
+ pyongyang_desc:0 ""
+ 
+ lyon:0 "Urban"
+ lyon_desc:0 ""
+ 
+ london:0 "Urban"
+ london_desc:0 ""
+ 
  #Hills ------------------------------------------------------------
  gibraltar:0 "Hills"
  gibraltar_desc:0 ""
@@ -254,6 +263,15 @@
  kola:0 "Plains"
  kola_desc:0 ""
  
+ mogadishu:0 "Plains"
+ mogadishu_desc:0 ""
+ 
+ wloclawek:0 "Plains"
+ wloclawek_desc:0 ""
+ 
+ wurzburg:0 "Plains"
+ wurzburg_desc:0 ""
+ 
  #Forest ------------------------------------------------------------ 
 
  luxembourg:0 "Forest"
@@ -274,7 +292,10 @@
  #Desert ------------------------------------------------------------  
  
  palawan:0 "Desert"
- palawan_desc:0 "" 
+ palawan_desc:0 ""
+ 
+ samarkand:0 "Desert"
+ samarkand_desc:0 "" 
  
  #Mountains ------------------------------------------------------------  
  
@@ -288,7 +309,13 @@
  denver_desc:0 "" 
  
  hobart:0 "Mountains"
- hobart_desc:0 "" 
+ hobart_desc:0 ""
+ 
+ sanaa:0 "Mountains"
+ sanaa_desc:0 ""
+ 
+ sion:0 "Mountains"
+ sion_desc:0 ""
  
  #Jungle ------------------------------------------------------------   
 
