That one Kurdish event I've re-written

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -345,8 +345,8 @@ ott.14.t:0 "Egypt and Arabia expands!"
 ott.14.d:0 "Now that Arabian Revolt is successful, Egypt and Arabia annexes some lands in the Ottoman middle east."
 ott.14.a:0 "Okay."
 
-ott.15.t:0 "Nawruz Riots"
-ott.15.d:0 "There is dissatisfaction at the Kurdish parts of our Empire. The Kurds are demanding larger autonomy, some even wants independence! Riots are out of control in Mosul and we suspect Syndicalists are behind it! However, Kurdish Aghas and Landowners are also supporting this movement so we don't know who is behind this incident."
+ott.15.t:0 "Riots on Nevruz"
+ott.15.d:0 "The dissatisfaction in the Kurdish parts of our empire have has reached a boiling point, with most demanding larger autonomy and some going as far as to demand outright independence. The 21st of March is an important date for these seperatists, as it is the date of Persian New Year. During this year's celebrations, riots have gotten out of control in Mosul and we are to suspect that the syndicalists are behind it all, be it with a certain uncertainty of having had the Kurdish aghas and landowners declare their support for the movement as well."
 ott.15.a:0 "Ready the Tüfek-i Muhafızayi Osmaniye!"
 
 ott.16.t:0 "Kurdish Uprising!"
