A few fixes here and there

--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -38,7 +38,7 @@ BEL_Small_Industry_desc:0 "By encouraging small industry over large we can bette
 BEL_Empower_Workers:0 "Empower Workers"
 BEL_Empower_Workers_desc:0 "By empowering the working class instead of the government we might be able to root out the problem more efficiently."
 BEL_Simplify:0 "Simplified Industrial Laws"
-BEL_Simplify_desc:0 "By symplifying the laws required to create and maintain a buisness we might encourage more production."
+BEL_Simplify_desc:0 "By simplifying the laws required to create and maintain a buisness we might encourage more production."
 BEL_welfare_state:0 "Welfare State"
 BEL_welfare_state_desc:0 "A welfare state created for and by the workers will guarantee a more secure way of life for everyone."
 BEL_The_Lion:0 "The Belgian Lion roars once more"
@@ -146,7 +146,7 @@ bel.11.t:0 "Syndicalists and Royalists unite!"
 bel.11.d:0 "After the catastrophic attack on the Charleroi headquarters the Royalists and Syndicalists have made a pact and set aside their differences until German occupation has come to an end."
 bel.11.a:0 "They have only made themselves a bigger target!"
 bel.12.t:0 "Syndicalists stand alone"
-bel.12.d:0 "After we succesfully cut the communications between Flemish and Walloon resistance, the syndicalists of Wallonia stand alone. With no real way to get support for their own free syndicalist state, they will have to seek aid from France."
+bel.12.d:0 "After we successfully cut the communications between Flemish and Walloon resistance, the syndicalists of Wallonia stand alone. With no real way to get support for their own free syndicalist state, they will have to seek aid from France."
 bel.12.a:0 "Finally a victory!"
 bel.13.t:0 "Syndicalists strike back!"
 bel.13.d:0 "After the catastrophic attack on the Charleroi headquarters the syndicalists are planning a massive terrorist attack on our infrastructure. We are however unable to reinforce both the army bases and our industrial complexes so we need to make a choice."
@@ -164,7 +164,7 @@ bel.16.t:0 "11th of July"
 bel.16.d:0 "The 11th of July 1302 will always be remembered as the great victory over the French army at the Guldensporenslag. On this day an inferior Flemish army defeated the French knights. This victory marked an important point in the creation of the Independent Flemish movement and has been immortalised in the roman "De leeuw van Vlaanderen" by Hendrik Conscience. With German forces spread thin to surpress the resistance the Flemish Resistance has prepared a massive attack to liberate the cities of Bruges, Gent, Kortrijk and Oostende. Due to our small forces we were quickly overrun and after 5 hours of heavy fighting our last stronghold at the Gravensteen in Ghent fell and the Flemish Lion proudly waves atop its battlements."
 bel.16.a:0 "We have lost control over West and East Flandres!"
 bel.17.t:0 "Flemish offer a deal"
-bel.17.d:0 "After the loss of great parts of Flandres, the Flemish Resistance has proposed a deal. They demand independence from Flandres-Wallonia and immediate retreat off all German forces out of Flandres. In exchange they are willing to remain part of Mittel-Europa and fullfill their role as buffer state and will not aid the Syndicalists in Wallonia in their struggle."
+bel.17.d:0 "After the loss of great parts of Flandres, the Flemish Resistance has proposed a deal. They demand independence from Flandres-Wallonia and immediate retreat off all German forces out of Flandres. In exchange they are willing to remain part of Mittel-Europa and fulfil their role as buffer state and will not aid the Syndicalists in Wallonia in their struggle."
 bel.17.a:0 "We have no choice but to accept these demands."
 bel.17.b:0 "Never! How dare they assume we would accept their proposal!"
 bel.18.t:0 "Walloons hear of Flemish Victories"
@@ -345,7 +345,7 @@ bel.69.t:0 "Belgian Tanks ready"
 bel.69.d:0 "Our factories have prepared their first batch of Belgian tanks and are ready to enter mass production."
 bel.69.a:0 "Very well"
 
-# checked up-to here
+# Checked up-to here so far - Zankoas
 
 ### Thinking waffle suggested text ###
 BEL_Charles_d'Aspremont_Lynden_for_pau:0 "Charles d'Aspremont Lynden"
