--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -194,6 +194,7 @@ CAL_american_autonomy_desc:0 ""
 CAL_school_of_ameirca:0 "School of America"
 CAL_school_of_ameirca_desc:0 ""
 CAL_american_business:0 "American Business Ties"
+
 ### Ideas ###
 california_rearmament:0 "California War Industries"
 hawaii_revolts:0 "The Hawaii Revolts"
@@ -224,6 +225,7 @@ CAL_jappanese_businesses:0 "Japanese-Pacific Business ties"
 CAL_aog_offices:0 "German – Pacific business ties"
 CAL_general_strike_malus:0 "West Coast General Strike"
 CAL_soldiers_bill:0 "G.I Bill"
+
 ### Parties ###
 CAL_totalist_party:0 "PCP"
 CAL_totalist_party_long:0 "Pacific Communist Party"
@@ -513,9 +515,9 @@ pacificstates.56.t:0 "PSA refused to sign peace treaty!"
 pacificstates.56.d:0 "The Pacific States refused our generous peace offer and renewed military actions..."
 pacificstates.56.a:0 "They will pay for this..."
 pacificstates.100.t:0 "Fate of the Unions"
-pacificstates.100.d:0 "Now that the civil war has come to an end, many are wondering what we should do about the unions allied with the CSA. Some wish those unions banned arguing that they will try to cause chaos in the Pacific States and do more harm then good. While other arguing the opposite saying that they do more good then harm and banning them will radicalize them further."
-pacificstates.100.a:0 "Unions contribute to prosparity"
-pacificstates.100.b:0 "Unions are not needed for prosparity"
+pacificstates.100.d:0 "Now that the civil war has come to an end, many are wondering what we should do about the unions allied with the CSA. Some wish those unions banned arguing that they will try to cause chaos in the Pacific States and do more harm then good. While other arguing the opposite saying that they do more good then harm and banning them will radicalise them further."
+pacificstates.100.a:0 "Unions contribute to prosperity"
+pacificstates.100.b:0 "Unions are not needed for prosperity"
 pacificstates.101.t:0 "The Underground Railroad?"
 pacificstates.101.d:0 "The CSA have emerged victorious in the civil war. As they begin to implement their radical agenda that will destroy the lives of Americans throughout the rest of America a number of political leaders have come together to discuss the idea of an Underground Railroad that would help bring in refugees away from syndicalism. This will cost time and money but will eventually be worth it they say."
 pacificstates.101.a:0 "Establish the Railroad!"
@@ -541,6 +543,6 @@ pacificstates.107.t:0 "Refugees from MacArthur's Tyranny"
 pacificstates.107.d:0 "Refugees have recently arrived from the USA. They have crossed over the Rockies to try and establish a new life in the Pacific States. All in an attempt to flee from the tyranny that is MacArthur's regime in America. "
 pacificstates.107.a:0 "Welcome Friends"
 pacificstates.108.t:0 "Treaty with the PSA?"
-pacificstates.108.d:0 "The PSA have sent us a treaty to establish better relations between us and them. This has caused a split within the government. Some say we should sign the treaty to improve relations as it could lead to reunification sooner. On the other hand just as many say that signing the treaty will prevent that since we are acknowledging them as a separate state. "
+pacificstates.108.d:0 "The PSA have sent us a treaty to establish better relations between us and them. This has caused a split within the government. Some say we should sign the treaty to improve relations as it could lead to reunification sooner. On the other hand just as many say that signing the treaty will prevent that since we are acknowledging them as a separate state."
 pacificstates.108.a:0 "Sign the Treaty"
 pacificstates.108.b:0 "Don't Sign the Treaty"
