--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -794,7 +794,7 @@ ustates.66.d:0 "Not long after Reed's speech, there was an outburst of violence 
 ustates.66.a:0 "Send a militia unit to restore order"
 
 ustates.67.t:0 "Southern Trade Unions"
-ustates.67.d:0 "Reed wanted to remove the power of the America First by transferring power to the Southern Trade Unions. As the trade unions attempted to consolidate their power the America First moved against them. Rallying people against the CSA, Long marched through the south causing chaos whereever he went."
+ustates.67.d:0 "Reed wanted to remove the power of the America First by transferring power to the Southern Trade Unions. As the trade unions attempted to consolidate their power the America First moved against them. Rallying people against the CSA, Long marched through the south causing chaos wherever he went."
 ustates.67.a:0 "Send in the militia to protect the trade unions."
 ustates.67.b:0 "Support the unions financially."
 
@@ -920,7 +920,7 @@ ustates.94.a:0 "Accept Long's offer for the Minute Men"
 ustates.94.b:0 "The federal troops are enough"
 
 ustates.95.t:0 "Federal Troops Clash With CSA and AUS in Chicago"
-ustates.95.d:0 "When the federal troops attempted to seperate both the AUS and CSA from each other a general melee broke out in Chicago and it quickly turned into."
+ustates.95.d:0 "When the federal troops attempted to separate both the AUS and CSA from each other a general melee broke out in Chicago and it quickly turned into."
 ustates.95.a:0 "Goddamn Reed."
 
 ustates.96.t:0 "Federal Troops Fire on CSA and AUS Attackers"
@@ -1164,7 +1164,7 @@ ustates.150.d:0 "With the America First Party broken as a political force and th
 ustates.150.a:0 "God bless the U.S.A.!"
 
 ustates.151.t:0 "Jack Reed's Death"
-ustates.151.d:0 "After a long illness, Chairman John 'Jack' Reed of the Combined Sydicates of America has passed away. An autopsy revealed that he died of a brain haemorrhage caused by a heart tumour."
+ustates.151.d:0 "After a long illness, Chairman John 'Jack' Reed of the Combined Syndicates of America has passed away. An autopsy revealed that he died of a brain haemorrhage caused by a heart tumour."
 ustates.151.a:0 "Momento Mori."
 
 reed_dead:0 "Jack Reed is dead"
@@ -1182,7 +1182,7 @@ ustates.154.d:0 "Charles Lindbergh, formerly Chairman of the America First Union
 ustates.154.a:0 "Hopefully he won't come back for a long time."
 
 ustates.155.t:0 "Economic Recovery"
-ustates.155.d:0 "For the first time in over a decade, our economists are reporting an overwhelmingly positive outlook for the fiscal year. The redistributive reforms we made back in February have caused aggregate demand to skyrocket, shoring up business in general, and the unemployment rate has dropped to single digits!"
+ustates.155.d:0 "For the first time in over a decade, our economists are reporting an overwhelmingly positive outlook for the fiscal year. The redistribution reforms we made back in February have caused aggregate demand to skyrocket, shoring up business in general, and the unemployment rate has dropped to single digits!"
 ustates.155.a:0 "Happy days are here again!"
 
 ustates.156.t:0 "Further Economic Recovery"
@@ -1508,7 +1508,7 @@ ustates.281.d:0 "During the turbulence of the 30ies the Army intelligence servic
 ustates.281.a:0 "The US Government shall have its host of spies!"
 ustates.281.b:0 "Public opinion forces the US government to discard the OSS"
 ustates.285.t:0 "Status of California"
-ustates.285.d:0 "As our main struggle against both the Combined Syndicates and the America First regime is over, we have slowly been restoring order to those former rebel strongholds in the Deep South and in the Great Lakes area. The California-based rival government of the Pacific States, however, still claims sovereignty over a large area of the Western US, going as far as commanding the former National Guard on those states and also several units of the USAAF. Even some capital ships of our navy have switched allegiance to the Sacramento clique! In order to restore the rule of law, as the saying goes, 'from sea to shining sea', our military leaders have devised a plan for an immediate police action against the rebel PSA to forcibly return those states to the Union. Resistance is expected to be high, however, since many civilians and most of the military are now giving value to their newly-gained independence as a bulwark against the chaos that engulfed the rest of the country. Even on our own home states, the common folk is more interested in returning to their towns and rebuilding their life's than on another round of this fratricidal civil war - if we go ahead with this invasion, we will surelly see a new set of major protests on our cities. For this reason, a good part of our senate favours a more diplomatic approach to this situation, simply convincing the Pacific States to rejoin the Washington-based government."
+ustates.285.d:0 "As our main struggle against both the Combined Syndicates and the America First regime is over, we have slowly been restoring order to those former rebel strongholds in the Deep South and in the Great Lakes area. The California-based rival government of the Pacific States, however, still claims sovereignty over a large area of the Western US, going as far as commanding the former National Guard on those states and also several units of the USAAF. Even some capital ships of our navy have switched allegiance to the Sacramento clique! In order to restore the rule of law, as the saying goes, 'from sea to shining sea', our military leaders have devised a plan for an immediate police action against the rebel PSA to forcibly return those states to the Union. Resistance is expected to be high, however, since many civilians and most of the military are now giving value to their newly-gained independence as a bulwark against the chaos that engulfed the rest of the country. Even on our own home states, the common folk is more interested in returning to their towns and rebuilding their life's than on another round of this fratricidal civil war - if we go ahead with this invasion, we will surely see a new set of major protests on our cities. For this reason, a good part of our senate favours a more diplomatic approach to this situation, simply convincing the Pacific States to rejoin the Washington-based government."
 ustates.285.a:0 "Demand immediate reincorporation of PSA!"
 ustates.285.b:0 "Leave it as it is"
 
@@ -1579,6 +1579,7 @@ ustates.301.d:0 "Germans are happy to see us joining the common cause - destroyi
 ustates.301.a:0 "A great news!"
 
 
+
 ustates.322.t:0 "Independent Federated Union"
 ustates.322.d:0 "...Nobody sees this..."
 ustates.322.a:0 "A new beginning"
@@ -1607,9 +1608,6 @@ ustates.401.b:0 "Sacco and Vanzetti are guilty"
 
 
 ### Foreign Policy ###
-
-
-
 usforeign.1.t:0 "The Monroe Doctrine"
 usforeign.1.d:0 "America has now been thrown into civil war, brother fighting brother, and it doesn't look good for the United States. Perhaps it is time to revoke the Monroe Doctrine as we cannot afford war with another until we solve our own problems and end this civil war."
 usforeign.1.a:0 "We can no longer protect South America"
