--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -134,7 +134,7 @@ TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 ""
 TEX_american_legion:0 "Apartheid America"
 TEX_american_legion_desc:0 ""
-TEX_old_southern_money:0 "Coporate Ties	"
+TEX_old_southern_money:0 "Corporate Ties"
 TEX_old_southern_money_desc:0 ""
 TEX_protecting_our_race:0 "Protecting our Race"
 TEX_protecting_our_race_desc:0 ""
@@ -250,6 +250,7 @@ TEX_german_trade:0 "German Trade ties"
 TEX_german_trade_desc:0 ""
 TEX_german_research:0 "German Research Cooperation"
 TEX_german_research_desc:0 ""
+
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
 TEX_pattons_mobility_plan2:0 "Patton's Mobility Plan"
@@ -292,6 +293,7 @@ TEX_reconstruction_policy:0 "Reconstructing America"
 TEX_abc_founded:0 "American Broadcasting Corporation"
 TEX_populist_education:0 "Populist Education"
 TEX_solider_bill:0 "G.I Bill"
+
 ### Parties ###
 TEX_totalist_party:0 "ACP"
 TEX_totalist_party_long:0 "American Communist Party"
