--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+#Need to check - Zankoas
 ### General ###
 submarine_pre:0 "Pre-Weltkrieg U-boat"
 submarine_pre_desc:0 "The first U-boats opened a new horizon for naval warfare. These new vessels can break through enemy waters without being detected and wreak havoc on the convoy routes."
