Checked KR_Equip_Air_l_english, should be all good

--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-#Need to check - Zankoas
+
 fighter:0 "Fighter"
 fighter_equipment_desc:0 "Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
 cv_fighter:0 "Fighter"
@@ -975,8 +975,9 @@ ITA_transport_plane_equipment_1:0 "Caproni Ca.133"
 FRA_transport_plane_equipment_1:0 "MB. 220"
 SWE_transport_plane_equipment_1:0 "Trp2"
 
-###Planes###
-# Australia
+### Planes ###
+
+### Australia ###
 AST_fighter_equipment_1:0 "CAC CA-12 Boomerang"
 AST_fighter_equipment_1_short:0 "CAC Boomerang"
 AST_fighter_equipment_2:0 "CAC Mustang"
@@ -993,7 +994,7 @@ AST_CAS_equipment_3_short:0 "Beaufighter"
 AST_jet_fighter_equipment_2:0 "CAC Sabre"
 AST_jet_fighter_equipment_2_short:0 "CAC Sabre"
 
-#Argentinia
+### Argentinia ###
 
 ARG_heavy_fighter_equipment_3:0 "I.Ae 30 Nancu P1"
 ARG_heavy_fighter_equipment_3_short:0 "Nancu P1"
@@ -1020,7 +1021,7 @@ ARG_jet_fighter_equipment_1_short:0 "Pulqui I"
 ARG_jet_fighter_equipment_2:0 "FMA IAe 33 Pulqui II"
 ARG_jet_fighter_equipment_2_short:0 "Pulqui II"
 
-#Belgium
+### Belgium ###
 
 BEL_fighter_equipment_0:0 "Avions Fairey Firefly"
 BEL_fighter_equipment_0_short:0 "Av-F. Firefly"
@@ -1042,45 +1043,21 @@ BEL_tac_bomber_equipment_2_short:0 "R-PZL 37"
 BEL_jet_fighter_equipment_2:0 "SABCA Hunter"
 BEL_jet_fighter_equipment_2_short:0 "Hunter"
 
-#Bulgarian
+### Bulgarian ###
 
 BUL_CAS_equipment_1:0 "DAR 10"
 BUL_CAS_equipment_1_short:0 "DAR 10"
 BUL_CAS_equipment_2:0 "KB-11 Fazan"
 BUL_CAS_equipment_2_short:0 "KB-11"
-# canadian
+
+### Canadian ###
 
 CAN_jet_fighter_equipment_1:0 "De Havilland Vampire"
 CAN_jet_fighter_equipment_1_short:0 "Vampire"
 CAN_jet_fighter_equipment_2:0 "CL 100 Canuck"
 CAN_jet_fighter_equipment_2_short:0 "CL 100 Canuck"
 
-#Czech
-CZE_CAS_equipment_1:0 "Aero Vodochody A.101"
-CZE_CAS_equipment_1_short:0 "Aero A.101"
-CZE_CAS_equipment_2:0 "Letov S-28"
-CZE_CAS_equipment_2_short:0 "S-28"
-
-CZE_fighter_equipment_0:0 "Avia B-34.1"
-CZE_fighter_equipment_0_short:0 "Avia B-34.1"
-CZE_fighter_equipment_1:0 "Avia B-534.1"
-CZE_fighter_equipment_1_short:0 "Avia B-534.1"
-CZE_fighter_equipment_2:0 "Avia B-135"
-CZE_fighter_equipment_2_short:0 "Avia B-135"
-
-CZE_tac_bomber_equipment_0:0 "Aero Vodochody A.100"
-CZE_tac_bomber_equipment_0_short:0 "Aero A.100"
-CZE_tac_bomber_equipment_1:0 "Aero Vodochody A.304"
-CZE_tac_bomber_equipment_1_short:0 "Aero A.304"
-CZE_tac_bomber_equipment_2:0 "Letov Š-50"
-CZE_tac_bomber_equipment_2_short:0 "Letov Š-50"
-CZE_tac_bomber_equipment_3:0 "Aero Vodochody A.300"
-CZE_tac_bomber_equipment_3_short:0 "Aero A.300"
-
-CZE_jet_fighter_equipment_1:0 "Avia S-92"
-CZE_jet_fighter_equipment_1_short:0 "S-92"
-
-#Romania
+### Romania ###
 ROM_CAS_equipment_1:0 "IAR 37"
 ROM_CAS_equipment_1_short:0 "IAR 37"
 ROM_CAS_equipment_2:0 "IAR 81"
@@ -1111,8 +1088,7 @@ ROM_nav_bomber_equipment_1_short:0 "SM.S.55"
 ROM_nav_bomber_equipment_2:0 "Heinkel He.114B"
 ROM_nav_bomber_equipment_2_short:0 "He.114B"
 
-#Holland
-# herr fokker wins the race, with a single Koolhoven interloper
+### Holland ###
 
 HOL_heavy_fighter_equipment_1:0 "Fokker G.1 Mercury"
 HOL_heavy_fighter_equipment_1_short:0 "Fokker G.1M"
@@ -1153,7 +1129,7 @@ HOL_CAS_equipment_2_short:0 "Fokker C.XIII"
 HOL_CAS_equipment_3:0 "Fokker C.XV"
 HOL_CAS_equipment_3_short:0 "Fokker C.XV"
 
-#Finland
+### Finland ###
 
 FIN_fighter_equipment_0:0 "Gloster Kukko"
 FIN_fighter_equipment_0_short:0 "Kukko"
@@ -1173,7 +1149,7 @@ FIN_CAS_equipment_1_short:0 "Fokker-VL C.X"
 FIN_tac_bomber_equipment_1:0 "Bristol-VL Blenheim"
 FIN_tac_bomber_equipment_1_short:0 "Blenheim"
 
-#Norway
+### Norway ###
 
 NOR_fighter_equipment_0:0 "F.F. 7 Hauk"
 NOR_fighter_equipment_0_short:0 "Hauk"
@@ -1184,7 +1160,7 @@ NOR_nav_bomber_equipment_1_short:0 "M.F. 11"
 NOR_tac_bomber_equipment_0:0 "Kjeller-Fokker C.V"
 NOR_tac_bomber_equipment_0_short:0 "Kj.-F. C.V"
 
-#Hungary
+### Hungary ###
 HUN_heavy_fighter_equipment_2:0 "DRR Me 210Ca-1"
 HUN_heavy_fighter_equipment_2_short:0 "Me 210Ca-1"
 HUN_heavy_fighter_equipment_3:1 "RMI-8 X/V"
@@ -1206,21 +1182,11 @@ HUN_fighter_equipment_2_short:1 "Héja"
 HUN_fighter_equipment_3:0 "MÁVAG Héja II"
 HUN_fighter_equipment_3_short:0 "Héja II"
 
-#British Raj
-
-RAJ_fighter_equipment_0:0 "Hawker Hart"
-RAJ_fighter_equipment_0_short:0 "Hart"
-
-RAJ_fighter_equipment_1:0 "Hawker Demon"
-RAJ_fighter_equipment_1_short:0 "Demon"
-
-RAJ_cv_fighter_equipment_0:0 "Hawker Osprey"
-RAJ_cv_fighter_equipment_0_short:0 "Osprey"
-#Spain
+### Spain ###
 SPA_fighter_equipment_2:0 "Hispano Aviación HA-1112"
 SPA_fighter_equipment_2_short:0 "HA-1112"
 
-#Sweden
+### Sweden ###
 
 SWE_CAS_equipment_1:0 "SAAB Northrop A-17 8A-1"
 SWE_CAS_equipment_1_short:0 "SAAB A-17 8A-1"
@@ -1256,7 +1222,7 @@ SWE_fighter_equipment_2_short:0 "Re. 2000 J12"
 SWE_fighter_equipment_3:0 "SAAB J21"
 SWE_fighter_equipment_3_short:0 "SAAB J21"
 
-#switzerland
+### Switzerland ###
 
 SWI_fighter_equipment_0:0 "Dewoitine D.27"
 SWI_fighter_equipment_0_short:0 "D.27"
@@ -1264,7 +1230,7 @@ SWI_fighter_equipment_0_short:0 "D.27"
 SWI_tac_bomber_equipment_0:0 "K+W Thun Fokker C.V.-E"
 SWI_tac_bomber_equipment_0_short:0 "K+W C.V.-E"
 
-# Turkish planes, all fictional, licence, or fictional licence builds
+### Turkey ###
 
 TUR_fighter_equipment_0:0 "TamTAS Hawk"
 TUR_fighter_equipment_0_short:0 "TamTAS Hawk"
@@ -1284,7 +1250,7 @@ TUR_tac_bomber_equipment_2_short:0 "THK Baltimore"
 TUR_tac_bomber_equipment_3:0 "THK Invader"
 TUR_tac_bomber_equipment_3_short:0 "THK Invader"
 
-#chinese planes
+### China ###
 CHI_fighter_equipment_0:0 "Liuchow Kwangsi Type 3"
 CHI_fighter_equipment_0_short:0 "Type 3"
 CHI_fighter_equipment_1:0 "CAMCO P40"
@@ -1294,37 +1260,3 @@ CHI_fighter_equipment_2_short:0 "X-P0"
 
 CHI_CAS_equipment_1:0 "CAMCO Vultee V-11"
 CHI_CAS_equipment_1_short:0 "Vultee V-11"
-
-#yugoslavian planes
-YUG_fighter_equipment_0:0 "Avia-Ikarus BH-33"
-YUG_fighter_equipment_0_short:0 "BH-33"
-YUG_fighter_equipment_1:0 "Ikarus IK-2"
-YUG_fighter_equipment_1_short:0 "IK-2"
-YUG_fighter_equipment_2:0 "Rogozarski IK-3"
-YUG_fighter_equipment_2_short:0 "IK-3"
-YUG_fighter_equipment_3:0 "Ikarus S-49"
-YUG_fighter_equipment_3_short:0 "S-49"
-
-YUG_heavy_fighter_equipment_1:0 "Rogozarski IK-5"
-YUG_heavy_fighter_equipment_1_short:0 "IK-5"
-YUG_heavy_fighter_equipment_2:0 "Rogozarski R-313"
-YUG_heavy_fighter_equipment_2_short:0 "R-313"
-YUG_heavy_fighter_equipment_3:0 "Nenadovic-Mitrovic"
-YUG_heavy_fighter_equipment_3_short:0 "NEMI"
-
-YUG_CAS_equipment_1:1 "Rogozarski R-100"
-YUG_CAS_equipment_1_short:0 "R-100"
-YUG_CAS_equipment_2:0 "Ikarus Orkan"
-YUG_CAS_equipment_2_short:0 "Ikarus Orkan"
-
-YUG_tac_bomber_equipment_0:0 "DFA-Breguet Br. 19 A2"
-YUG_tac_bomber_equipment_0_short:0 "Br. 19 A2"
-YUG_tac_bomber_equipment_1:0 "DFA-Dornier Do-17Ka "
-YUG_tac_bomber_equipment_1_short:0 "Do-17 Ka"
-YUG_tac_bomber_equipment_2:0 "DFA-Bristol Blenheim"
-YUG_tac_bomber_equipment_2_short:0 "Blenheim"
-YUG_tac_bomber_equipment_3:0 "Zmaj R-1"
-YUG_tac_bomber_equipment_3_short:0 "R-1"
-
-YUG_nav_bomber_equipment_1:0 "Rogozarski SIM-XIV-H"
-YUG_nav_bomber_equipment_1_short:0 "SIM-XIV-H"
